# actovue

./: .gitignore  COSTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
actovue/: __init__.py  api.py  metrics.py  ops.py  patch.py  probe.py  worker_ext.py
bench/: eval_matrix.py  run_overhead.py  train_probe.py
examples/: demo.py
scripts/: pod_setup.sh  repro.sh
tests/: test_api.py  test_graph_capture.py  test_metrics.py  test_obalcells.py  test_patch.py  test_probe.py  test_probe_math.py  test_stress.py
